fixup jobs page! directory on the right, add jump-to button when collapsed

--- a/pycon/static/css/slight.css
+++ b/pycon/static/css/slight.css
@@ -776,7 +776,7 @@ a {
   margin: 0 auto;
   color: #012A29;
   box-sizing: border-box;
-  max-width: 900px;
+  max-width: 1024px;
   padding: 0 10px;
   width: 100%;
 }
@@ -1847,4 +1847,9 @@ body.account .page-content form {
   top: 15px;
   right: 15px;
   border-radius: 5px;
+}
+
+/* Jobs Page */
+
+#jobfairparticpants {
 }
